--- a/src/contact.html
+++ b/src/contact.html
@@ -2,71 +2,97 @@
 <html lang = "en">
     <head>
         <meta lang="en-us" charset="utf-8">
-        <title>About</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Contact</title>
+        <link rel="stylesheet" href="dist/bootstrap.css">
     </head>
     <body>
-        <header>
-            <img src="images/my_logo.PNG" alt="logo" width="50" height="50">
-          <nav>
-            <a href="contact.html">Contact</a>
-            <button class="menu-button"><img src="images/menu.png" alt="menu logo" width="30" height="30"></button>
-            <div class="menu-content">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="blog.html">Blog</a></li>          
+      <header class="container-fluid bg-body-tertiary " id="top">
+        <nav class="navbar navbar-expand-md row-cols-md-6">
+            <div class="navbar-brand col-md-4 d-flex justify-content-center ">
+              <img class="rounded-circle" src="images/my_logo.PNG" alt="logo" width="50" height="50">
+            </div>
+            <a class="d-flex justify-content-end nav-link active  "href="contact.html">Contact</a> 
+
+            <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#hamburger-content" aria-controls="hamburger-content" aria-expanded="false" aria-label="Toggle navigation">
+                <img src="images/menu.png" alt="menu logo" width="30" height="30">
+            </button>
+            
+            <div class="collapse navbar-collapse col-md-4 " id="hamburger-content">
+                <ul class="navbar-nav text-center">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li><hr>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li><hr>
+                    <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li><hr>
+                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
                 </ul>
             </div>
-          </nav>
-        </header>
-        <main>
-          <h1>Contact me</h1>
-          <section>
-            <h2>Location</h2>
-          <address>
-            <p>Country: Ethiopia</p>
-            <p>City: Addis Ababa</p>
-            <p>Subcity: Gulele</p>
-            <p>Street: Algeria st.</p>
-            <p>Building: Addis Ababa University 6 Kilo Campus</p>
-          </address>
-            <h3>Do you need a map?</h3>
+        </nav>
 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31374.23891274205!2d38.749191241457574!3d9.044389829794438!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b8fcdfd73345d%3A0x71d655e4e7c6c79e!2zQUEgVW5pdmVyc2l0eSA2IEtpbG8gQ2FtcHVzIHwg4YqgLuGKoCDhi6nhipLhiajhiK3hiLLhibIgNiDhiqrhiI4g4Yqr4Yid4Y2T4Yi1!5e0!3m2!1sen!2set!4v1700983219781!5m2!1sen!2set" width="800" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </section>
-          <section>
+      </header>
+      <main class="bg-warning-subtle p-3 ">
+        <h1>Contact me</h1>
+        <section class="row">
+          <div class="col-md-6">
+            <h2>Location</h2>
+            <address>
+              <p>Country: Ethiopia</p>
+              <p>City: Addis Ababa</p>
+              <p>Subcity: Gulele</p>
+              <p>Street: Algeria st.</p>
+              <p>Building: Addis Ababa University 6 Kilo Campus</p>
+            </address>
+          </div>
+          <div class="col-md-6">
+            <h3>Do you need a map?</h3>
+            <iframe class="img-thumbnail" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31374.23891274205!2d38.749191241457574!3d9.044389829794438!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b8fcdfd73345d%3A0x71d655e4e7c6c79e!2zQUEgVW5pdmVyc2l0eSA2IEtpbG8gQ2FtcHVzIHwg4YqgLuGKoCDhi6nhipLhiajhiK3hiLLhibIgNiDhiqrhiI4g4Yqr4Yid4Y2T4Yi1!5e0!3m2!1sen!2set!4v1700983219781!5m2!1sen!2set" width="800" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </section>
+        <section class="row">
+          <div class="col-md-6">
             <h2>Social Media</h2>
             <p>Feel free to reach me via the following.</p>
-            <ul>
-              <li><img src="images/gmail.png" alt="gmail logo" width="50" height="50">&nbsp;<a href="mailto:risekab@gmail.com">Email</a></li>
-              <li><img src="images/telegram.png" alt="telegram logo" width="50" height="50">&nbsp;<a href="https://t.me/Thequantumduck">Telegram</a></li>
-              <li><img src="images/twitter.png" alt="twitter logo" width="50" height="50">&nbsp;<a href="https://twitter.com/risekab">Twitter</a></li>
-              <li><img src="images/instagram.png" alt="instagram logo" width="50" height="50">&nbsp;<a href="https://instagram.com/daffytribbiani/">Instagram</a></li>
+            <ul class="list-unstyled row gap-4">
+              <li><img class="me-3" src="images/gmail.png" alt="gmail logo" width="50" height="50">&nbsp;<a class="icon-link icon-link-hover text-body-emphasis" href="mailto:risekab@gmail.com">Email</a></li>
+              <li><img class="me-3" src="images/telegram.png" alt="telegram logo" width="50" height="50">&nbsp;<a class="icon-link icon-link-hover text-body-emphasis" href="https://t.me/Thequantumduck">Telegram</a></li>
+              <li><img class="me-3" src="images/twitter.png" alt="twitter logo" width="50" height="50">&nbsp;<a class="icon-link icon-link-hover text-body-emphasis" href="https://twitter.com/risekab">Twitter</a></li>
+              <li><img class="me-3" src="images/instagram.png" alt="instagram logo" width="50" height="50">&nbsp;<a class="icon-link icon-link-hover text-body-emphasis" href="https://instagram.com/daffytribbiani/">Instagram</a></li>
             </ul>
+          </div>
+          <div class="col-md-6">
             <h3>You want to hire me? These are for you.</h3>
-            <ul>
-              <li><img src="images/linkedin.png" alt="linked in logo" width="50" height="50">&nbsp;<a href="https://linkedin.com/in/kaleb-asratemedhin-81748625b">Linked in</a></li>
-              <li><img src="images/github.png" alt="github logo" width="50" height="50">&nbsp;<a href="https://github.com/KalebAsratemedhin">Github</a></li>
-              <li><img src="images/leetcode.png" alt="leetcode logo" width="50" height="50">&nbsp;<a href="https://leetcode.com/4ureyes/">Leetcode</a></li>
+            <ul class="list-unstyled row gap-4">
+              <li><img class="me-3" src="images/linkedin.png" alt="linked in logo" width="50" height="50">&nbsp;<a class="icon-link icon-link-hover text-body-emphasis" href="https://linkedin.com/in/kaleb-asratemedhin-81748625b">Linked in</a></li>
+              <li><img class="me-3" src="images/github.png" alt="github logo" width="50" height="50">&nbsp;<a class="icon-link icon-link-hover text-body-emphasis" href="https://github.com/KalebAsratemedhin">Github</a></li>
+              <li><img class="me-3" src="images/leetcode.png" alt="leetcode logo" width="50" height="50">&nbsp;<a class="icon-link icon-link-hover text-body-emphasis" href="https://leetcode.com/4ureyes/">Leetcode</a></li>
               
             </ul>
-            <a href="other_resources/final-cv.pdf" download="button">Download cv</a>
-          </section>
-        </main>
-        <footer>
-            <hr>
-              <a href="https://twitter.com/risekab"><img src="images/twitter.png" alt="twitter logo" width="50" height="50"></a>
-              <a href="https://instagram.com/daffytribbiani/"><img src="images/instagram.png" alt="instagram logo" width="50" height="50"></a>
-              <a href="https://t.me/Thequantumduck"><img src="images/telegram.png" alt="telegram logo" width="50" height="50"></a>
-              <a href="https://linkedin.com/in/kaleb-asratemedhin-81748625b"><img src="images/linkedin.png" alt="linked in logo" width="50" height="50"></a>
-              <p>copyright &copy; all rights reserved.</p>
-              <address>
-                Author: Kaleb Asratemedhin <br>
-                Address: Addis Ababa, Ethiopia <br>
-                Telephone: +251996304541 <br>
-             </address>
-             <a href="contact.html">back to top</a>
-        </footer>
+            <a class="icon-link icon-link-hover" href="other_resources/final-cv.pdf" download="button">Download cv</a>
+
+          </div>
+        </section>
+      </main>
+        <footer class="bg-dark text-light p-3 ">
+          <div class="my-5 text-center">
+            <a class=" icon-link icon-link-hover link-info " href="#top">back to top</a>
+        </div>
+        <div class="row align-items-center gy-5">
+          <div class="col-sm-5 gy-4 border-black text-center  row">
+            <a class="col-md-3 col-sm-6 col-6 " href="https://twitter.com/risekab"><img src="images/twitter.png" alt="twitter logo" width="50" height="50"></a>
+            <a class="col-md-3 col-sm-6 col-6" href="https://instagram.com/daffytribbiani/"><img src="images/instagram.png" alt="instagram logo" width="50" height="50"></a>
+            <a class="col-md-3 col-sm-6 col-6" href="https://t.me/Thequantumduck"><img src="images/telegram.png" alt="telegram logo" width="50" height="50"></a>
+            <a class="col-md-3 col-sm-6 col-6" href="https://linkedin.com/in/kaleb-asratemedhin-81748625b"><img src="images/linkedin.png" alt="linked in logo" width="50" height="50"></a>
+          </div>
+  
+          <div class="col-10 col-sm d-flex align-items-center justify-content-center ">
+              <p >&copy; all rights reserved.</p>
+          </div>
+          <address class="col-10 text-center col-sm lh-lg" >
+            Author: Kaleb Asratemedhin <br>
+            Address: Addis Ababa, Ethiopia <br>
+            Telephone: +251996304541 <br>
+          </address>
+        </div>
+      </footer>
+      <script src="dist/bootstrap.bundle.js"></script>
     </body>
 </html>
